--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "readline-sync": "^1.4.10"
   }
 }
